<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>br.com.rruffer.library</groupId>
	<artifactId>library-fx</artifactId>
	<version>1.0.0</version>
	<properties>
		<javafx.version>14</javafx.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>${javafx.version}</maven.compiler.source>
		<maven.compiler.target>${javafx.version}</maven.compiler.target>
		<maven.compiler.release>14</maven.compiler.release>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>${javafx.version}</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>${javafx.version}</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.jfoenix/jfoenix -->
		<dependency>
			<groupId>com.jfoenix</groupId>
			<artifactId>jfoenix</artifactId>
			<version>9.0.10</version>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<release>${maven.compiler.release}</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-maven-plugin</artifactId>
				<version>0.0.4</version>
				<configuration>
					<options>
						<option>--add-opens</option>
						<option>javafx.graphics/javafx.css=ALL-UNNAMED</option>
						<option>--add-opens</option>
						<option>javafx.base/com.sun.javafx.runtime=ALL-UNNAMED</option>
						<option>--add-opens</option>
						<option>javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED</option>
						<option>--add-opens</option>
						<option>javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED</option>
						<option>--add-opens</option>
						<option>javafx.base/com.sun.javafx.binding=ALL-UNNAMED</option>
						<option>--add-opens</option>
						<option>javafx.base/com.sun.javafx.event=ALL-UNNAMED</option>
						<option>--add-opens</option>
						<option>javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED</option>
						<option>--add-exports</option>
						<option>javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix</option>
						<option>--add-exports</option>
						<option>javafx.controls/com.sun.javafx.scene.control=com.jfoenix</option>
						<option>--add-exports</option>
						<option>javafx.base/com.sun.javafx.binding=com.jfoenix</option>
						<option>--add-exports</option>
						<option>javafx.graphics/com.sun.javafx.stage=com.jfoenix</option>
						<option>--add-exports</option>
						<option>javafx.base/com.sun.javafx.event=com.jfoenix</option>
					</options>
					<mainClass>br.com.rruffer.library.App</mainClass>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>